# Angel-x

./: .dockerignore  .editorconfig  .env.development  .env.docker  .env.example  .env.production  .example.env  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSOLIDATION_DETAILED_CHANGES.md  CONSOLIDATION_PHASE_1_COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PACKAGE.md  Dockerfile  FEATURE_STATUS_COMPLETE.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INDEX_AND_ROADMAP.md  INSTALLATION.md  LICENSE  MANIFEST.in  MASTER_TEST_IMPLEMENTATION_SUMMARY.md  MASTER_TEST_QUICK_REF.md  Makefile  PHASE10_COMPLETE.md  PHASE10_INTEGRATION_COMPLETE.md  PHASE10_INTEGRATION_SUMMARY.md  PHASE10_MANIFEST.md  PHASE8_REFINED_MANIFEST.md  PHASE9_BUILD_COMPLETE.md  PHASE9_QUICKSTART.md  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  REMAINING_WORK_ROADMAP.md  ROADMAP.md  (+27 more)
.github/: pull_request_template.md
app/: __init__.py
config/: __init__.py  config.production.py  development.py  production.py  settings.py  test_config.py
data/: option_chain_NIFTY_20260110_133104.json
docs/: ADVANCED_CONFIGURATION.md  ANGELONE_API_VALIDATION.md  API_REFERENCE.md  AUTO_STRIKE_SELECTOR_GUIDE.md  BROKER_CONNECTION_GUIDE.md  CODE_CONSOLIDATION_GUIDE.md  CONFIGURATION.md  CONTRIBUTORS.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_INTEGRATION.md  DASHBOARD_QUICK_START.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  DOCUMENTATION.md  FAQ.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INTEGRATION.md  INTEGRATION_ALL.md  LIVE_DATA_READY.md  MASTER_TEST_PLAN.md  MONITORING_SETUP.md  OPERATIONS.md  PAPER_TRADING.md  PERFORMANCE_TUNING_GUIDE.md  PHASE10_COMPLETE.md  PHASE10_QUICK_REFERENCE.md  PHASE3_QUICK_REFERENCE.py  PHASE4_QUICK_REFERENCE.py  PHASE7_COMPLETION_REPORT.md  PHASE8_COMPLETE.md  PHASE8_QUICK_REFERENCE.md  PHASE8_REFINED_COMPLETE.md  PHASE8_REFINED_QUICK_START.md  PHASE9_COMPLETE.md  PHASE9_QUICK_REFERENCE.md  PRODUCTION_DEPLOYMENT.md  (+9 more)
scripts/: fetch_broker_data.py  fetch_greeks_data.py  live_strike_selector.py  phase10_adaptive_demo.py  phase2_validation.py  phase8_integration_demo.py  phase9_dashboard_demo.py  run_master_test.py  test_0_safety_setup.py  test_1_data_health.py  test_2_signal_flood.py  test_3_entry_quality.py  test_4_adaptive_veto.py  test_5_risk_manager.py  test_6_sl_failure.py  test_7_shadow_live.py  test_8_micro_live.py  test_adaptive_integration.py  test_alerts.py  test_risk_management.py  test_smartapi_integration.py  validate_golden_rules.py  verify_integration.py  verify_production_setup.py
src/: __init__.py  __version__.py  (+2 more)
(+314 files in other folders)
